syntax = "proto3";

package crm.contact.v1;

option csharp_namespace = "CRM.Protobuf.Contacts.V1";

import "contact.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service LeadApi {
  rpc Ping (google.protobuf.Empty) returns (PongReply);
}

service ContactApi {
  rpc CreateContact(CreateContactRequest) returns (CreateContactResponse);
  rpc UploadPhoto(UploadPhotoRequest) returns (BooleanResponse);
  rpc ListContacts(google.protobuf.Empty) returns (ListContactsResponse);
  rpc GetContact(GetContactRequest) returns (Contact);
}

message GetContactRequest {
  string contactId = 1;
}

message GetContactResponse {
  Contact contact = 1;
}

message ListContactsResponse {
  repeated Contact contacts = 1;
}

message CreateContactResponse {
  Contact contact = 1;
}

message CreateContactRequest {
  google.protobuf.StringValue firstName = 1;
  string lastName = 2;
  google.protobuf.StringValue company = 3;
  google.protobuf.StringValue title = 4;
  google.protobuf.StringValue description = 5;
}

message UploadPhotoRequest {
  string id =1;
  string photo = 2;
}
